--- a/PaymentGateway/appsettings.json
+++ b/PaymentGateway/appsettings.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-LU23G81;Database=RobotDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationSettings": {
+    "JWT_Secret": "1234567890123456"
+    //"Client_URL": "http://localhost:4200"
+  }
 }
